Regression: Missing snap gizmo in multiple viewport instances #107830

Closed
opened 2023-05-11 07:06:53 +02:00 by AWRBRO · 4 comments

** ryzen 9**
Operating system: windows 10
Graphics card: Nvidia Rtx 3060ti

Blender 3.3 & 3.5

Short Description
measure snapping not working properly in other viewports. or not updating information and snap circle not showing in all viewports.i will share the video and file, please check this issue

Exact steps for others to reproduce the error

  • Open attached file
  • select measure tool
  • Snap when drawing the line
** ryzen 9** Operating system: windows 10 Graphics card: Nvidia Rtx 3060ti **Blender 3.3 & 3.5** **Short Description** measure snapping not working properly in other viewports. or not updating information and snap circle not showing in all viewports.i will share the video and file, please check this issue **Exact steps for others to reproduce the error** - Open attached file - select measure tool - Snap when drawing the line
AWRBRO added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-11 07:06:54 +02:00
Iliya Katushenock added the
Interest
Modeling
Interest
User Interface
labels 2023-05-11 07:28:07 +02:00
Member

My tests gives me such result:

  • Up to 3.4.1 everything is working as it should
  • From 3.5.0 and above:
    • Snap circle only shows up in one of the 3d viewport in the window.
    • Snapping still always works no matter if the circle shows up.

I'm on linux with nvidia k5100m

Not sure if this is also caused by the same mechanism of #107570 , the circle thing doesn't seem like it but the selection may be related.

My tests gives me such result: - Up to 3.4.1 everything is working as it should - From 3.5.0 and above: - Snap circle only shows up in one of the 3d viewport in the window. - Snapping still always works no matter if the circle shows up. I'm on linux with nvidia k5100m Not sure if this is also caused by the same mechanism of #107570 , the circle thing doesn't seem like it but the selection may be related.
Author

**In my case , only one of the viewport showing the measure snap circle and snapping properly,

rather all not showing it and not snapping always.** https://projects.blender.org/attachments/b78524e7-b9c9-4776-bce5-f3ab160dd01c

**In my case , only one of the viewport showing the measure snap circle and snapping properly, rather all not showing it and not snapping always.** https://projects.blender.org/attachments/b78524e7-b9c9-4776-bce5-f3ab160dd01c
Member

Snap circle only shows up in one of the 3d viewport in the window.
Snapping still always works no matter if the circle shows up.

I can confirm in both buildbot build and build from source, bisecting.

> Snap circle only shows up in one of the 3d viewport in the window. Snapping still always works no matter if the circle shows up. I can confirm in both buildbot build and build from source, bisecting.
Pratik Borhade added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-05-11 12:05:05 +02:00
Member

Started to happen after 2b32a2c3b2 / 0349a6e6e0

@mano-wii ^

Started to happen after 2b32a2c3b2193ccfe9062efd842f35798fca0cd5 / 0349a6e6e05 @mano-wii ^
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-05-11 13:03:19 +02:00
Pratik Borhade changed title from measuring snap not working properly in other viewports. to Regression: Missing snap gizmo in multiple viewport instances 2023-05-11 13:04:53 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-11 16:47:34 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107830
No description provided.