Fix #107830: missing snap indication in measure tool

Error happened because the activated snap state was different from the
one being drawn.

So create a utility that activates the correct state.