source/blender/editors/include/ED_view3d.h
@@ -337,6 +337,7 @@ typedef struct V3DSnapCursorState {
 
 void ED_view3d_cursor_snap_state_default_set(V3DSnapCursorState *state);
 V3DSnapCursorState *ED_view3d_cursor_snap_state_get(void);
+void ED_view3d_cursor_snap_state_set(V3DSnapCursorState *state);
 V3DSnapCursorState *ED_view3d_cursor_snap_active(void);
 void ED_view3d_cursor_snap_deactive(V3DSnapCursorState *state);
 void ED_view3d_cursor_snap_prevpoint_set(V3DSnapCursorState *state, const float prev_point[3]);
